# blink

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_shaders.bat
blink/librender_base/: BufferAttributes.cpp  BufferAttributes.h  BufferGeometry.cpp  BufferGeometry.h  BufferObject.cpp  BufferObject.h  CMakeLists.txt  Geometry.cpp  Geometry.h  PredefinedVertexAttributes.h  RenderModule.cpp  RenderModule.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
blink/librender_base/util/: ImageLoader.cpp  ImageLoader.h
blink/librender_opengl/: CMakeLists.txt  OpenGLBufferObject.cpp  OpenGLBufferObject.h  OpenGLRenderModule.cpp  OpenGLRenderModule.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  OpenGLVertexBufferObject.cpp  OpenGLVertexBufferObject.h
blink/librender_vulkan/: CMakeLists.txt  VulkanRenderModule.cpp  VulkanRenderModule.h  VulkanTexture.cpp  VulkanTexture.h
example/common/: CMakeLists.txt
example/common/common_components/: LockTargetCameraData.h
example/hello_world/: CMakeLists.txt  HelloWorldApp.cpp  HelloWorldApp.h
example/mandelbrot/: CMakeLists.txt  Mandelbrot.fs  Mandelbrot.vs  MandelbrotApp.cpp  MandelbrotApp.h  MandelbrotMaterial.cpp  MandelbrotMaterial.h
example/sprite/: CMakeLists.txt  Sprite.cpp  Sprite.fs  Sprite.h  Sprite.vs  SpriteApp.cpp  SpriteApp.h  SpriteGeometry.cpp  SpriteGeometry.h  SpriteMaterial.cpp  SpriteMaterial.h  SpriteRenderBlock.cpp  SpriteRenderBlock.h  SpriteRenderModule.cpp  SpriteRenderModule.h
libblink/: CMakeLists.txt  Components.cpp  Components.h  Framework.cpp  Framework.h  GeometryBuilder.cpp  GeometryBuilder.h  GeometryUtils.h  IApp.cpp  IApp.h  Materials.h  Texture2D.cpp  blink.cpp  blink.h
libblink/camera/: CameraData.cpp  CameraData.h  CameraSystem.cpp  CameraSystem.h
libblink/cameras/: Camera.cpp  Camera.h  FixCamera.cpp  FixCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  TargetCamera.cpp  TargetCamera.h
libblink/core/: Component.cpp  Component.h  Entity.cpp  Entity.h
libblink/device/: Device.h
libblink/geometries/: BoxGeometry.cpp  BoxGeometry.h  BufferAttributes.cpp  BufferAttributes.h  BufferGeometry.cpp  BufferGeometry.h  Geometry.cpp  Geometry.h  GeometryUtils.cpp  GeometryUtils.h  PlaneGeometry.cpp  PlaneGeometry.h  SphereGeometry.cpp  SphereGeometry.h
libblink/input/: InputData.h  InputSystem.h  MouseComponent.cpp  MouseComponent.h
libblink/lights/: AmbientLight.cpp  AmbientLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
libblink/materials/: LambertMaterial.cpp  LambertMaterial.h  Material.cpp  Material.h  PhongMaterial.cpp  PhongMaterial.h  WireframeMaterial.cpp  WireframeMaterial.h
libblink/objects/: Mesh.cpp  Mesh.h  Object.cpp  Object.h  Scene.cpp  Scene.h
libblink/render/: BufferAttributes.cpp  BufferAttributes.h  Geometry.h  GeometryBuilder.cpp  GeometryBuilder.h  GlConfig.h  OpenGL3RenderSystem.cpp  OpenGL3RenderSystem.h  RenderBuffer.cpp  RenderBuffer.h  RenderData.h  RenderModule.cpp  RenderModule.h  RenderState.cpp  RenderState.h  RenderSystem.cpp  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  VertexAttributes.cpp  VertexAttributes.h  glad.h
libblink/scene/: SceneSystem.cpp  SceneSystem.h  TransformData.h
libblink/shaders/: Lambert.fs  Phong.vs  Shader.cpp  Shader.h  ShaderLib.h  Wireframe.fs  Wireframe.gs  Wireframe.vs
libblink/systems/: CameraSystem.cpp  CameraSystem.h  InputSystem.cpp  InputSystem.h  OpenGL3RenderSystem.cpp  OpenGL3RenderSystem.h  RenderSystem.cpp  RenderSystem.h  SceneSystem.cpp  SceneSystem.h
libblink/textures/: Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h
libblink/ui/: UiModule.cpp  UiModule.h
libblink/utils/: ImageLoader.cpp  ImageLoader.h
libfoundation/: BaseType.cpp  BaseType.h  CMakeLists.txt  EventSystem.h  File.h  InstanceManager.h  PathParser.cpp  PathParser.h  StringBuilder.cpp  StringBuilder.h
source/blink/: CMakeLists.txt  RenderData.h  app.cpp  app.h  blink.cpp  blink.h
source/core/: CMakeLists.txt  EcsWorld.cpp  EcsWorld.h  ILogicalSystem.h  IRenderSystem.h
source/foundation/: BaseTypes.cpp  BaseTypes.h  BaseTypesGlm.cpp  BaseTypesGlm.h  BuiltinFormatter.h  CMakeLists.txt  Directory.cpp  Directory.h  File.cpp  File.h  JsonSerializer.cpp  JsonSerializer.h  Log.cpp  Log.h  PathParser.cpp  PathParser.h  PreDefine.h  PreDefineMacro.h  Reflect.cpp  Reflect.h  StringBuilder.cpp  StringBuilder.h
source/physics/: CMakeLists.txt  JoltPhysicsSystem.cpp  JoltPhysicsSystem.h
source/render_base/: BufferAttributes.cpp  BufferAttributes.h  BufferGeometry.cpp  BufferObject.cpp  BufferObject.h  CMakeLists.txt  Geometry.cpp  Geometry.h  PredefinedVertexAttributes.h  RenderModule.cpp  RenderModule.h  Shader.h  Texture.h
source/render_opengl/: CMakeLists.txt  GlConfig.h  OpenGLBufferObject.cpp  OpenGLBufferObject.h  OpenGLRenderModule.cpp  OpenGLRenderModule.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h  Texture2D.h
source/render_vulkan/: CMakeLists.txt  Types.cpp  Types.h  VulkanBase.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanContext.cpp  VulkanContext.h  VulkanDescriptorPool.cpp  VulkanDescriptorPool.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDescriptorSets.cpp  VulkanDescriptorSets.h  VulkanFence.cpp  VulkanFence.h  VulkanFrameBuffer.cpp  VulkanFrameBuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanLogicalDevice.cpp  VulkanLogicalDevice.h  VulkanMemory.cpp  VulkanMemory.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderModule.cpp  VulkanRenderModule.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanResModule.cpp  VulkanResModule.h  VulkanResourceModule.cpp  VulkanResourceModule.h  VulkanSemaphore.cpp  VulkanSemaphore.h  (+16 more)
test/foundation_test/: CMakeLists.txt  MathTestCase.cpp  PathParserTestCase.cpp  ReflectionTestCase.cpp  SpirvCrossTestCase.cpp  StringBuilderTestCase.cpp  main.cpp
test/noise_test/: CMakeLists.txt  main.cpp  noiseutils.cpp  noiseutils.h
(+473 files in other folders)
